<resources>
    <string name="app_name">IZRandom</string>
    <string name="bottom_nav_label_1">Ngẫu nhiên</string>
    <string name="bottom_nav_label_2">Gợi ý</string>
    <string name="bottom_nav_label_3">Cùng chơi</string>
    <string name="bottom_nav_label_4">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_direction_label">Hướng ngẫu nhiên</string>
    <string name="random_dice_label">Xí ngầu</string>
    <string name="random_coin_label">Đồng xu</string>
    <string name="random_wheel_label">Vòng quay</string>
    <string name="random_number_label">Số ngẫu nhiên</string>
    <string name="random_list_label">Danh sách</string>
    <string name="flip_card_label">Lật thẻ bài</string>
    <string name="question_for_fun">Bộ câu hỏi vui</string>
    <string name="random_direction_description">Random Direction</string>
    <string name="roll_a_dice_description">Roll A Dice</string>
    <string name="toss_a_dice_description">Toss A Dice</string>
    <string name="spin_a_wheel_description">Spin A Wheel</string>
    <string name="random_numbers_description">Random Numbers</string>
    <string name="random_list_description">Random List</string>
    <string name="title_activity_random_direction">RandomDirectionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back_button">back to previous screen</string>
    <string name="random_direction_guide">Chạm vào màn hình để xoay mũi tên theo hướng bất kỳ</string>
    <string name="random_direction_object_description">Random direction object</string>
    <string name="action_button_description">Change Appearance</string>
    <string name="custom_direction_guide">Lướt sang trái hoặc phải để thay đổi hình dạng mũi tên</string>
    <string name="roll_dice_guide">Chạm vào màn hình để thực hiện tung xí ngầu</string>
    <string name="custom_dice_guide">Lướt sang trái hoặc phải để thay đổi hình dạng xí ngầu</string>
    <string name="num_random">1</string>
    <string name="random_number_guide">Chạm vào màn hình để random số bất kì</string>
    <string name="nums_integer">Số lượng</string>
    <string name="number_of_integer">1</string>
    <string name="ran_num_descript_for_min">Số nhỏ nhất:</string>
    <string name="ran_num_descript_for_max">Số lớn nhất:</string>
    <string name="ran_num_min">1</string>
    <string name="ran_num_max">100</string>
    <string name="decrease_amount_description">decrease amount button</string>
    <string name="increase_amount_description">increase amount button</string>
    <string name="flip_coin_guide">Chạm vào màn hình để thực hiện tung đồng xu</string>
    <string name="custom_coin_guide">Lướt sang trái hoặc phải để thay đổi hình dạng đồng xu</string>
    <string name="chooser_label">Người được chọn</string>
    <string name="number_chooser">Số lượng người được chọn</string>
    <string name="chooser_guide">Chạm các ngón tay vào màn hình và giữ để thực hiện chọn ngẫu nhiên</string>
    <string name="custom_chooser_guide">Lướt sang trái hoặc phải để thay đổi màu nền</string>
    <string name="raffle_description">raffle description</string>
    <string name="raffle_label">Xổ số</string>
    <string name="participants_label">Người tham gia</string>
    <string name="input_participants_hint">Nhập người tham gia</string>
    <string name="awards_label">Giải thưởng</string>
    <string name="input_awards_hint">Nhập giải thưởng</string>
    <string name="get_started_label">Bắt đầu</string>
    <string name="back_button_label">Quay lại</string>
    <string name="length_hint">Tên của người hoặc giải thưởng phải nhỏ hơn 27 ký tự</string>
    <string name="start_hint">Hãy đảm bảo số người tham gia lớn hơn hoặc bằng số giải thưởng để bắt đầu</string>
    <string name="divide_team_label">Chia đội nhóm</string>
    <string name="get_result">Tạo kết quả</string>
    <string name="person_per_team_count_label">Theo số người mỗi nhóm</string>
    <string name="team_count_label">Theo số nhóm</string>
    <string name="default_value_divide_team">1</string>
    <string name="start_divide_team_hint">Số người tham gia phải lớn hơn hoặc bằng số người mỗi nhóm/số nhóm để bắt đầu</string>
    <string name="count_hint">Số nhóm/số người mỗi nhóm phải lớn hơn 0</string>
    <string name="guide_label">Hướng dẫn</string>
    <string name="close_label">Đóng</string>
    <string name="divide_team_result_guide">Lướt sang phải hoặc trái để xem các đội nhóm khác</string>
    <string name="result_label">Kết quả</string>
    <string name="wheel_custom_appbar_title">Thay đổi vòng quay</string>
    <string name="lucky_wheel_edit_title">Tùy chỉnh vòng quay</string>
    <string name="flip_card_object_description">Flip card object</string>
    <string name="flip_card_object_label">Tên thẻ bài</string>
    <string name="flip_card_object_guide">Chạm vào để chỉnh sửa</string>
    <string name="flip_card_menu_start_button">Bắt đầu</string>
    <string name="flip_card_menu_guide">Lướt sang phải hoặc trái để thay đổi bộ thẻ bài</string>
    <string name="flip_card_back_to_menu_button">Quay lại</string>
    <string name="flip_card_guide">Chạm vào thẻ bài để lật thẻ bài</string>
    <string name="flip_card_add_label">Thêm bộ thẻ bài</string>
    <string name="flip_card_edit_label">Chỉnh sửa bộ thẻ bài</string>
    <string name="flip_card_confirm_button_description">Lưu bộ thẻ bài</string>
    <string name="truth_dare_label">Sự thật và Thử thách</string>
    <string name="card_label">Thẻ bài</string>
    <string name="truth_dare_start_guide">Người chơi sẽ chọn ngẫu nhiên các thẻ bài để thực hiện những thử thách. Trò chơi phù hợp từ hai người trở lên.</string>
    <string name="truth_dare_cards_label">Thẻ bài</string>
    <string name="question_for_fun_label">Bộ câu hỏi vui</string>
    <string name="question_for_fun_guide">Chạm vào thẻ bài để lật thẻ bài. Vuốt sang trái để sang thẻ bài tiếp theo. Vuốt sang phải để quay lại thẻ bài trước</string>
    <string name="chooser_truth_dare_game_session_label">Người chơi lượt này</string>
    <string name="chooser_truth_dare_game_session_guide">Chạm các ngón tay vào màn hình và giữ để thực hiện chọn người chơi ở lượt này</string>
    <string name="sound_label">Âm thanh</string>
    <string name="vibrate_label">Rung</string>
    <string name="dark_mode_label">Chế độ tối màu</string>
    <string name="shared_preferences">app prefs</string>
    <string name="tournament_bracket_title">Lập bảng thi đấu</string>
    <string name="tournament_input_hnt">Người/Đội tham gia</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hint_input_for_tournament_bracket">Nhập người hoặc đội tham gia</string>
    <string name="filter_label">Bộ lọc</string>
    <string name="default_value_category">Tất cả</string>
    <string name="suggestion_guide">Chạm vào màn hình để thực hiện đề xuất</string>
    <string name="confirm_label">Xác nhận</string>
</resources>