<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_tournament_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/AppBarTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tournament_bracket_title" />

        <ImageButton
            android:id="@+id/bb_tb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/back_button"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/ic_back_button"
            app:tint="@color/colorOnBackground" />

        <ImageButton
            android:id="@+id/guide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/action_button_description"
            android:minHeight="60dp"
            android:minWidth="60dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/ic_guide_icon"
            app:tint="@color/colorOnBackground" />
    </Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/participant_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tournament_input_hnt"
        app:expandedHintEnabled="false"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/participant_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_for_tournament_bracket"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine|textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="24dp"
        android:id="@+id/start_button"
        android:layout_width="252dp"
        android:layout_height="56dp"
        app:cornerRadius="24dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/get_result"
        android:enabled="false"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>