<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_raffle"
    tools:context=".random_module.raffle.RaffleActivity">
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/AppBarTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/raffle_label" />

        <ImageButton
            android:id="@+id/bb_raffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/back_button"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/ic_back_button"
            android:tint="@color/colorOnBackground" />

        <ImageButton
            android:id="@+id/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/colorBackground"
            android:contentDescription="@string/action_button_description"
            android:minHeight="60dp"
            android:minWidth="60dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/ic_guide_icon"
            android:tint="@color/colorOnBackground" />
    </Toolbar>


    <TextView
        android:visibility="invisible"
        android:id="@+id/txt_guide"
        style="@style/GuideTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="56dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/raffle_placeholder" />

    <LinearLayout
        android:id="@+id/raffle_placeholder"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/participant_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:hint="@string/participants_label">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/participant_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_participants_hint">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/award_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginTop="24dp"
            android:hint="@string/awards_label">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/award_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_awards_hint">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="24dp"
        android:id="@+id/start_button"
        android:layout_width="252dp"
        android:layout_height="56dp"
        app:cornerRadius="24dp"
        android:layout_gravity="center_horizontal"
        android:textFontWeight="700"
        android:text="@string/get_started_label"
        android:enabled="false"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/raffle_placeholder"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="24dp"
        android:id="@+id/back_button"
        android:layout_width="252dp"
        android:layout_height="56dp"
        app:cornerRadius="24dp"
        android:layout_gravity="center_horizontal"
        android:textFontWeight="700"
        android:visibility="invisible"
        android:backgroundTint="@color/colorBackgroundLight"
        android:textColor="@color/colorOnBackgroundDark"
        android:text="@string/back_button_label"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/raffle_placeholder"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>