<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chooser_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".random_module.chooser.ChooserActivity">
    <RelativeLayout
        android:id="@+id/chooser_holder_layout"
        android:layout_width="match_parent"
        android:background="@drawable/purple_chooser_background_selector"
        android:layout_height="match_parent"/>
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/AppBarTextStyle"
            android:textColor="@color/colorOnPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chooser_label" />

        <ImageButton
            android:id="@+id/bb_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/ic_back_button"
            android:tint="@color/colorOnPrimary" />

        <ImageButton
            android:id="@+id/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/action_button_description"
            android:minHeight="60dp"
            android:minWidth="60dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_change_appearance"
            android:tint="@color/colorOnPrimary" />
    </Toolbar>
    <TextView
        android:id="@+id/chooser_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:text="@string/number_chooser"
        android:textColor="@color/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageButton
        android:id="@+id/btn_decrease_chooser_count"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/decrease_amount_description"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:src="@drawable/ic_back_button"
        app:layout_constraintBottom_toBottomOf="@+id/text_chooser_count_value"
        app:layout_constraintEnd_toStartOf="@+id/text_chooser_count_value"
        app:layout_constraintTop_toTopOf="@+id/text_chooser_count_value"
        app:tint="@color/colorOnPrimary" />

    <TextView
        android:id="@+id/text_chooser_count_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:height="24dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:minWidth="30dp"
        android:text="@string/number_of_integer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooser_count_label" />

    <ImageButton
        android:id="@+id/btn_increase_chooser_count"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/increase_amount_description"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:rotation="180"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:src="@drawable/ic_back_button"
        app:layout_constraintBottom_toBottomOf="@+id/btn_decrease_chooser_count"
        app:layout_constraintStart_toEndOf="@+id/text_chooser_count_value"
        app:layout_constraintTop_toTopOf="@+id/btn_decrease_chooser_count"
        app:layout_constraintVertical_bias="0.25"
        app:tint="@color/colorOnPrimary" />

    <TextView
        android:id="@+id/txt_guide"
        style="@style/GuideTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="56dp"
        android:text="@string/chooser_guide"
        android:textAlignment="center"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_chooser_count_value" />
</androidx.constraintlayout.widget.ConstraintLayout>